--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,5 +64,17 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+
+    implementation "androidx.room:room-runtime:2.2.5"
+    implementation "androidx.room:room-ktx:2.2.5"
+
     implementation(project(":core"))
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    // Extensions = ViewModel + LiveData
+    //implementation "android.arch.lifecycle:extensions:1.1.1"
+    //kapt "android.arch.lifecycle:compiler:1.1.1"
+    // Room
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
 }
