--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation "androidx.arch.core:core-runtime:2.1.0"
 
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.11.4'
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.11.4'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.11.4'
+
     def dagger_version = "2.27"
     implementation "com.google.dagger:dagger:$dagger_version"
 
