--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,8 @@ plugins {
     id "kotlin-android"
     id "kotlin-android-extensions"
     id "kotlin-kapt"
-    id "androidx.navigation.safeargs.kotlin"
+    id "androidx.navigation.safeargs"
+    id "dagger.hilt.android.plugin"
 }
 
 android {
@@ -50,10 +51,11 @@ dependencies {
     implementation "com.google.android.exoplayer:extension-cast:$exoplayer_version"
 
     def dagger_version = "2.36"
-    implementation "com.google.dagger:dagger:$dagger_version"
+
+    implementation "com.google.dagger:hilt-android:$dagger_version"
+    kapt "com.google.dagger:hilt-compiler:$dagger_version"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
     def nav_version = "2.4.0-alpha02"
 
@@ -63,6 +65,7 @@ dependencies {
 
     // Dynamic Feature Module Support
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
 
     // Testing Navigation
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
@@ -71,14 +74,13 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-
-    implementation "androidx.room:room-runtime:2.2.5"
-    implementation "androidx.room:room-ktx:2.2.5"
-    kapt "androidx.room:room-compiler:2.2.5"
-
     implementation(project(":core"))
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
+}
+
+kapt {
+    correctErrorTypes true
 }
